# ts-quant

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
tests/: test_fase1.py  test_fase2.py  test_fase3.py  test_fase4.py  test_fase5.py
ts_quant/: __init__.py  api.py
ts_quant/core/: __init__.py  memory_manager.py  tensor_utils.py  windowing.py
ts_quant/engines/: __init__.py  catch22.py  rocket.py  signatures.py  tsfresh_core.py  wavelets.py
ts_quant/utils/: __init__.py  config.py  feature_selection.py  validation.py
