[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-quant"
version = "0.2.0"
description = "GPU-accelerated quantitative time-series feature extraction for financial data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "AnalisaSaham"},
]
keywords = ["time-series", "feature-extraction", "gpu", "quantitative-finance", "catboost"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
signatures = ["signatory>=1.2.6"]
test = [
    "pytest>=7.0",
    "pycatch22",
    "PyWavelets",
]

[project.urls]
Homepage = "https://github.com/Tonoooo/ts-quant"

[tool.setuptools.packages.find]
where = ["."]
include = ["ts_quant*"]
